Fix timezone close button, shift headings to fit and reduce size of links

--- a/app/webroot/sass/_components/_timezones.scss
+++ b/app/webroot/sass/_components/_timezones.scss
@@ -12,7 +12,11 @@
     transition: all 0.3s ease;
     
     h3, h2 {
-        padding: 0 10px;
+        padding: 0 20px 0 10px;
+    }
+    
+    li {
+        font-size: 1rem;
     }
     
     &:target {
@@ -22,11 +26,13 @@
     }
     
     a.close {
+        position: fixed;
+        top: 15px;
+        right: 10px;
         color: #FFF;
         font-weight: bold;
         font-size: 1.8rem;
         text-shadow: none;
         opacity: 0.7;
-        margin: 1rem;
     }
 }
